--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FAKER_LOCALE = id_ID
+FILESYSTEM_DRIVER = public
+
+FOLDER_IN_PUBLIC_HTML = "blog"
